fix title positioning on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -254,4 +254,8 @@ p {
     position: relative;
     bottom: 40px;
   }
+
+  .header-title {
+    top: 10px;
+  }
 }
